--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hanlin Cai
+title: Jin Ke
 tagline: Two roads diverged in woods, I took the one less traveled by.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
@@ -6,25 +6,22 @@ url: https://caihanlin.com
 
 # Owner/author information
 owner:
-  name:           Hanlin Cai
-  avatar:         hanlin.jpg
+  name:           Jin Ke
+  avatar:         touxiang.jpg
 #  bio:
-  email:          hanlin.cai@ieee.org
+  email:          kejin981129@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
-  facebook: caihanlin2002
-  github: GuangLun2000
-  linkedin: hanlin-cai-07b53b23b
-  # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
-  instagram: lancecai2002
+  Phone: +8613245318527
+  
+  # scholar:
   # lastfm:
   # tumblr:
-  # For Google Authorship https://plus.google.com/authorship
+  # For Google Authorship 
   # google_plus:
 
 # Analytics and webmaster tools stuff goes here
 # https://search.google.com/search-console/ownership
-google_verify: "SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
+google_verify: "s"
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
 
@@ -35,14 +32,7 @@ links:
     url: /
   - title: Publications
     url: /publications/
-  - title: Projects
-    url: /projects/
-  - title: Awards
-    url: /awards/
-  - title: Hobbies
-    url: /hobbies/
-  - title: Blogs
-    url: /blogs/
+  
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
