--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Jin Ke
 tagline: Two roads diverged in woods, I took the one less traveled by.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
+url: https://kejin.xyz
 
 # Owner/author information
 owner:
